fix: add type module to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "amplify-express-example",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "build": "NODE_PATH=.amplify-hosting/compute/default/ npm install",
     "serve": "node .amplify-hosting/compute/default/server.js"
